The offer and coupon is added. Offer is also applied in home shope and cart

--- a/glamyze/templates/my_admin/addproduct.html
+++ b/glamyze/templates/my_admin/addproduct.html
@@ -42,7 +42,19 @@
             {% endfor %}
           </select>
         </div>
-
+        <!-- offer selection -->
+        <div class="col-md-6">
+          <label for="subcategory" class="form-label">Select an offer for product if any</label>
+          <select class="form-select" id="offer" name="offer_id" required>
+              <option value="" selected>-- Select an Offer --</option>
+              {% for offer in offers %}
+              <option value="{{ offer.id }}">
+                  {{ offer.offer_name }}
+              </option>
+              {% endfor %}
+          </select>
+      </div>
+      
         <!-- Material -->
         <div class="col-md-6">
           <label for="material" class="form-label">Material</label>
