--- a/glamyze/templates/my_admin/base.html
+++ b/glamyze/templates/my_admin/base.html
@@ -88,13 +88,13 @@
                 </a>
             </li>
             <li class="sidebar-item">
-                <a class="sidebar-link" href="/hello" aria-expanded="false">
+                <a class="sidebar-link" href="{% url 'banner_management:banner_view' %}" aria-expanded="false">
                     <span><i class="ti ti-photo"></i></span>
                     <span class="hide-menu">Banners</span>
                 </a>
             </li>
             <li class="sidebar-item">
-                <a class="sidebar-link" href="/hello" aria-expanded="false">
+                <a class="sidebar-link" href="{% url 'promotion_management:offer_view' %}" aria-expanded="false">
                     <span><i class="ti ti-discount"></i></span>
                     <span class="hide-menu">Offers</span>
                 </a>
