--- a/glamyze/templates/user/shop_product_list.html
+++ b/glamyze/templates/user/shop_product_list.html
@@ -1,44 +1,54 @@
-
 {% load static %}
 {% for product in products%}
 <div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
-					<!-- Block2 -->
-					<div class="block2">
-						<div class="block2-pic hov-img0">
-							<img src="{{product.image1.url}}" alt="IMG-PRODUCT">
+    <!-- Block2 -->
+    <div class="block2">
+        <div class="block2-pic hov-img0">
+            <img src="{{product.image1.url}}" alt="IMG-PRODUCT">
 
-							<a href="" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
-								View
-							</a>
-						</div>
+            <a href="" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
+                View
+            </a>
+        </div>
 
-						<div class="block2-txt flex-w flex-t p-t-14">
-							<div class="block2-txt-child1 flex-col-l ">
-								{% if product.total_stock == 0 %}
-        						<div class="warning-message" style="color: #ff0000; font-size: 12px; margin: 5px 0; font-weight: 500; text-align: center;">
-            						Out of Stock
-        						</div>
-        						{% elif product.total_stock <= 5 %}
-        							<div class="warning-message" style="color: #ffa500; font-size: 12px; margin: 5px 0; font-weight: 500; text-align: center;">
-            						Low Stock
-        						</div>
-        						{% endif %}
-								<a href="{% url 'product_app:product_view' product.id %}" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
-									{{product.product_name}}
-								</a>
+        <div class="block2-txt flex-w flex-t p-t-14">
+            <div class="block2-txt-child1 flex-col-l ">
+                {% if product.total_stock == 0 %}
+                <div class="warning-message" style="color: #ff0000; font-size: 12px; margin: 5px 0; font-weight: 500; text-align: center;">
+                    Out of Stock
+                </div>
+                {% elif product.total_stock <= 5 %}
+                    <div class="warning-message" style="color: #ffa500; font-size: 12px; margin: 5px 0; font-weight: 500; text-align: center;">
+                    Low Stock
+                </div>
+                {% endif %}
+                <a href="{% url 'product_app:product_view' product.id %}" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
+                    {{product.product_name}}
+                </a>
 
-								<span class="stext-105 cl3">
-									₹{{ product.variant_price }}
-								</span>
-							</div>
+                <div class="price-container">
+                    {% if product.offer_price %}
+                        <span class="stext-105 cl3" style="text-decoration: line-through; color: #888;">
+                            ₹{{ product.variant_price }}
+                        </span>
+                        <span class="stext-105 cl3" style="color: #e65540; margin-left: 5px;">
+                            ₹{{ product.offer_price }}
+                        </span>
+                    {% else %}
+                        <span class="stext-105 cl3">
+                            ₹{{ product.variant_price }}
+                        </span>
+                    {% endif %}
+                </div>
+            </div>
 
-							<div class="block2-txt-child2 flex-r p-t-3">
-								<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-									<img class="icon-heart1 dis-block trans-04" src="{% static 'images/icons/icon-heart-01.png' %}" alt="ICON">
-									<img class="icon-heart2 dis-block trans-04 ab-t-l" src="{% static 'images/icons/icon-heart-02.png' %}" alt="ICON">
-								</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			{% endfor %}
+            <div class="block2-txt-child2 flex-r p-t-3">
+                <a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
+                    <img class="icon-heart1 dis-block trans-04" src="{% static 'images/icons/icon-heart-01.png' %}" alt="ICON">
+                    <img class="icon-heart2 dis-block trans-04 ab-t-l" src="{% static 'images/icons/icon-heart-02.png' %}" alt="ICON">
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+{% endfor %}
