--- a/glamyze/templates/user/home_page_layout.html
+++ b/glamyze/templates/user/home_page_layout.html
@@ -2,7 +2,7 @@
 <section class="bg0 p-t-23 p-b-140">
 <div class="container">
 			<div class="p-b-10">
-				<h3 class="ltext-103 cl5">
+				<h3 class="ltext-103 cl5 mb-5">
 					Product Overview
 				</h3>
 			</div>
