--- a/glamyze/templates/user/product_view.html
+++ b/glamyze/templates/user/product_view.html
@@ -385,6 +385,13 @@
                 <div class="item-slick2 p-l-15 p-r-15 p-t-15 p-b-15">
                     <div class="block2">
                         <!-- Image section remains the same -->
+                        <div class="block2-pic hov-img0">
+                            <img src="{{ item.image1.url }}" alt="IMG-PRODUCT">
+
+                            <a href="#" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
+                                Quick View
+                            </a>
+                        </div>
                         <div class="block2-txt flex-w flex-t p-t-14">
                             <div class="block2-txt-child1 flex-col-l">
                                 <a href="{% url 'product_app:product_view' item.id %}" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
