--- a/glamyze/templates/user/account_layout.html
+++ b/glamyze/templates/user/account_layout.html
@@ -20,7 +20,7 @@
           <a href="{% url 'address_app:account_management' %}" class="list-group-item list-group-item-action {% block address_active1 %}{% endblock %}">Dashboard</a>
           <a href="{% url 'profile_app:profile_view' %}" class="list-group-item list-group-item-action {% block address_active2 %}{% endblock %}">Profile</a>
           <a href="{% url 'profile_app:change_password' %}" class="list-group-item list-group-item-action {% block address_active3 %}{% endblock %}">Change Password</a>
-          <a href="#" class="list-group-item list-group-item-action {% block address_active4 %}{% endblock %}">Orders</a>
+          <a href="{% url 'order_app:order_view' %}" class="list-group-item list-group-item-action {% block address_active4 %}{% endblock %}">Orders</a>
           <a href="{% url 'address_app:address_view' %}" class="list-group-item list-group-item-action {% block address_active5 %}{% endblock %}">Addresses</a>
           <a href="#" class="list-group-item list-group-item-action {% block address_active6 %}{% endblock %}">Wallet</a>
         </div>
